--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ dkms.conf
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.idea
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -125,3 +125,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/Projet_FIP2_Cavalier_etudiant.iml
+/.idea/vcs.xml
